--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "prop-types": "^15.7.2"
   },
   "peerDependencies": {
-    "react": "16.x",
-    "react-dom": "16.x"
+    "react": "^16.8",
+    "react-dom": "^16.8"
   },
   "devDependencies": {
     "delay": "^4.1.0",
